[gd_scene load_steps=4 format=3 uid="uid://ckkvnnao4ed62"]

[ext_resource type="PackedScene" uid="uid://boxpprwbm1mu8" path="res://input.tscn" id="1_1qucg"]
[ext_resource type="Script" path="res://2016/day5/day_5.gd" id="1_e4jkw"]
[ext_resource type="PackedScene" uid="uid://h1gsq0uihed7" path="res://2016/day5/password.tscn" id="3_htadp"]

[node name="Day5" type="CanvasLayer"]
script = ExtResource("1_e4jkw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.12549, 0, 1)

[node name="Input" parent="." instance=ExtResource("1_1qucg")]
day = 5

[node name="DayLabel" type="Label" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 147.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 36
text = "Day 5"

[node name="Part1Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 75.0
offset_right = 147.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 36
text = "Part 1: "

[node name="Part2Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 125.0
offset_right = 147.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 36
text = "Part 2: "

[node name="PasswordPt1" parent="." instance=ExtResource("3_htadp")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -76.0
offset_right = 190.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="PasswordPt2" parent="." instance=ExtResource("3_htadp")]
offset_left = 170.0
offset_top = 418.0
offset_right = 550.0
offset_bottom = 512.0
is_pt1 = false

[connection signal="match_found" from="." to="." method="_on_match_found"]
[connection signal="available" from="Input" to="." method="_on_input_available"]
[connection signal="entered" from="PasswordPt1" to="." method="_on_password_pt_1_entered"]
[connection signal="entered" from="PasswordPt2" to="." method="_on_password_pt_2_entered"]
